# pypenador

./: .editorconfig  .gitignore  Pipfile  README.rst  pyproject.toml
src/pypenador/: __main__.py  cli.py  constants.py  scrounge.py
tests/: conftest.py  test_cli.py  test_scrounge.py
